--- a/www/package.json
+++ b/www/package.json
@@ -93,6 +93,7 @@
     "redux": "^4.0.0",
     "scriptjs": "^2.5.8",
     "stackblur-canvas": "^1.4.1",
+    "strapi-sdk-javascript": "^0.2.1",
     "tinycolor2": "^1.4.1",
     "typeface-roboto": "0.0.54",
     "web-audio-player": "^1.3.3"
