--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   -in id_rsa.enc -out ~/.ssh/id_rsa -d
 after_success:
 - chmod 600 ~/.ssh/id_rsa
-- ssh -t travis@89.208.245.64 -p 26365 -o StrictHostKeyChecking=no 'cd ~/blog && git pull && cd www && npm install && npm run build && sudo /usr/bin/systemctl restart strapi.service'
+- ssh travis@89.208.245.64 -p 26365 -o StrictHostKeyChecking=no 'cd ~/blog && git pull && cd www && npm install && npm run build'
+- ssh -t travis@89.208.245.64 -p 26365 -o StrictHostKeyChecking=no 'sudo /usr/bin/systemctl restart strapi.service'
 addons:
   ssh_known_hosts: 89.208.245.64
