--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -5,7 +5,8 @@
         "strictNullChecks": true,
         "module": "esnext",
         "jsx": "react", 
-        "target": "es6", 
+        "lib": ["es5", "es2015.promise", "dom", "es2015"],
+        "target": "es5",
         "esModuleInterop": true,
         "allowJs": true, 
         "noImplicitAny": false, 
