--- a/www/package.json
+++ b/www/package.json
@@ -26,6 +26,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-rc.2",
+    "@babel/preset-env": "^7.0.0-rc.2",
     "@types/enzyme": "^3.1.13",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.1",
@@ -34,6 +36,8 @@
     "@types/react-test-renderer": "^16.0.2",
     "@types/webpack-env": "^1.13.6",
     "arraybuffer-loader": "^1.0.6",
+    "babel-loader": "^8.0.0-beta.6",
+    "babel-polyfill": "^6.26.0",
     "base64-inline-loader": "^1.1.1",
     "css-loader": "^1.0.0",
     "enzyme": "^3.4.1",
